<resources>
    <string name="app_name">Information</string>
    <string name="text1">Name:</string>
    <string name="text2">Email:</string>
    <string name="text3">Phone:</string>
    <string name="text4">Postal Code:</string>
    <string name="submit">Submit</string>

    <string name="Name">Name</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="email">example@email.com</string>
    <string name="postal">Postal Code</string>
    <string name="textview">TextView</string>
</resources>
